@@ -3,7 +3,8 @@ package Pizzaria.Service;
 import Pizzaria.DTO.SaborDTO;
 import Pizzaria.Entiny.Sabor;
 import Pizzaria.Repositorye.SaborRepository;
-import org.springframework.beans.BeanUtils;
+import jakarta.persistence.EntityNotFoundException;
+import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -12,55 +13,67 @@ import java.util.stream.Collectors;
 
 @Service
 public class SaborService {
+    private final SaborRepository saborRepository;
+    private final ModelMapper modelMapper ;
 
     @Autowired
-    private SaborRepository saborRepository;
+    public SaborService(SaborRepository saborRepository,
+                          ModelMapper modelMapper){
+        this.saborRepository = saborRepository;
+        this.modelMapper = modelMapper;
+    }
 
-    public Sabor findById(Long id){
-        return saborRepository.findById(id).orElse(null);
+    public SaborDTO findById(Long id) {
+        try{
+            Sabor sabor = saborRepository.findById(id)
+                    .orElseThrow(() -> new IllegalArgumentException(" nao existe" + id));
+            return toSaborDTO(sabor);
+        }catch (IllegalArgumentException ex) {
+            throw new IllegalArgumentException("Ocorreu um erro ao tentar recuperar o cliente."+ex.getMessage(), ex);
+        }
     }
 
     public List<SaborDTO> listar(){
-        List<Sabor> sabors = saborRepository.findByAtivo();
-        return sabors.stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+        return saborRepository.findByAtivo().stream().map(this::toSaborDTO).toList();
     }
 
-    public SaborDTO cadastrar(SaborDTO saborDTO){
-        Sabor sabor = new Sabor();
-        BeanUtils.copyProperties(saborDTO,sabor);
-        sabor = saborRepository.save(sabor);
-        return convertToDTO(sabor);
+    public Sabor cadastrar(SaborDTO saborDTO){
+        Sabor clienteNovo = modelMapper.map(saborDTO,Sabor.class);
+        return saborRepository.save(clienteNovo);
     }
 
-    public SaborDTO editar(Long id,SaborDTO saborDTO){
-        if (saborRepository.existsById(id)){
-            Sabor sabor = saborRepository.findById(id).orElse(null);
-            if (sabor != null){
-                BeanUtils.copyProperties(saborDTO,sabor,"id");
-                sabor = saborRepository.save(sabor);
-                return convertToDTO(sabor);
-            }
-        }else {
-            throw new IllegalArgumentException("Sabor não encontrado com o ID fornecido: " + id);
-        }
-        return null;
-    }
+    public Sabor editar(Long id, SaborDTO saborDTO) {
+        if (saborRepository.existsById(id)) {
+            Sabor saborBanco = saborRepository.findById(id).orElseThrow(()
+                    -> new IllegalArgumentException("Sabor não encontrado com o ID fornecido: " + id));
 
-    public void dezAtivar(Long id, Sabor sabor) {
-        Sabor saborBanco = saborRepository.findById(id).orElse(null);
-        if (saborBanco != null){
-            sabor.setAtivo(false);
-            saborRepository.save(sabor);
-        }else {
-            throw new IllegalArgumentException("Sabor não encontrado com o ID: " + id);
+            saborBanco.setNome(saborDTO.getNome());
+
+            return saborRepository.save(saborBanco);
+        } else {
+            throw new IllegalArgumentException("Cliente não encontrado com o ID fornecido: " + id);
         }
     }
 
-    private SaborDTO convertToDTO(Sabor sabor) {
-        SaborDTO saborDTO = new SaborDTO();
-        BeanUtils.copyProperties(sabor, saborDTO);
-        return saborDTO;
+
+    public void delete(Long id) {
+        Sabor saborBanco = saborRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Sabor com ID "+id+" nao existe"));
+
+        if (saborBanco != null) {
+            desativarSabor(saborBanco);
+        }
     }
+
+    private void desativarSabor(Sabor sabor) {
+        sabor.setAtivo(false);
+        saborRepository.save(sabor);
+    }
+
+
+    public SaborDTO toSaborDTO(Sabor sabor) {
+        return modelMapper.map(sabor, SaborDTO.class);
+    }
+
+
 }
